tests/ui/parser/unicode-string-literal-syntax-error-64792.rs
// https://github.com/rust-lang/rust/issues/64792
struct X {}

const Y: X = X("รถ"); //~ ERROR expected function, tuple struct or tuple variant, found struct `X`

fn main() {}
